# xcso-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: main.rs
