[package]
name = "xcso"
version = "1.0.0"
edition = "2021"
description = "Used to create compressed iso images for Project Stellar"
repository = "https://github.com/tankbusta/xcso-rust"

[[bin]]
name = "make-xcso"
path = "src/main.rs"

[dependencies]
indicatif = "0.17.6"
console = { version = "0.15.7", default-features = false, features = ["ansi-parsing"] }
minilz4 = "^0.6"
